# storage/api-docs/api-docs.json
@@ -5,165 +5,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/v1/user/addresses": {
-            "get": {
-                "tags": [
-                    "Address"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/OA_listType"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_listQ"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_listPage"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_SortBy"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_OrderBy"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_limit"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_Relations"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Address"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/ApiAddressRequest_name"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_Relations"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/v1/user/addresses/{id}": {
-            "get": {
-                "tags": [
-                    "Address"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/OA_id"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_Relations"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "put": {
-                "tags": [
-                    "Address"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/OA_id"
-                    },
-                    {
-                        "$ref": "#/components/parameters/ApiAddressRequest_name"
-                    },
-                    {
-                        "$ref": "#/components/parameters/OA_Relations"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Address"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/OA_id"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/v1/auth/forgot-password": {
             "post": {
                 "tags": [
@@ -318,6 +159,249 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/v1/user/addresses": {
+            "get": {
+                "tags": [
+                    "Address"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/OA_listType"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_listQ"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_listPage"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_SortBy"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_OrderBy"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_limit"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_Relations"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Address"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_title"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_address"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_is_default"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_country_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_province_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_city_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_suburb_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_area_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_country_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_province_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_city_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_suburb_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_area_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_postcode"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_display_address"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_Relations"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/user/addresses/{id}": {
+            "get": {
+                "tags": [
+                    "Address"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/OA_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_Relations"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Address"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/OA_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_title"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_address"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_is_default"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_country_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_province_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_city_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_suburb_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_area_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_country_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_province_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_city_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_suburb_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_area_name"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_postcode"
+                    },
+                    {
+                        "$ref": "#/components/parameters/ApiAddressRequest_display_address"
+                    },
+                    {
+                        "$ref": "#/components/parameters/OA_Relations"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Address"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/OA_id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/v1/user/change-avatar": {
@@ -560,14 +644,6 @@
                     "type": "string"
                 }
             },
-            "ApiAddressRequest_name": {
-                "name": "name",
-                "in": "query",
-                "required": true,
-                "schema": {
-                    "type": "string"
-                }
-            },
             "ApiForgotPasswordRequest_email": {
                 "name": "email",
                 "in": "query",
@@ -666,6 +742,131 @@
             },
             "ApiVerifyPasswordRequest_code": {
                 "name": "code",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_title": {
+                "name": "title",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_address": {
+                "name": "address",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_is_default": {
+                "name": "is_default",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1
+                    ],
+                    "default": 0
+                }
+            },
+            "ApiAddressRequest_country_id": {
+                "name": "country_id",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_province_id": {
+                "name": "province_id",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_city_id": {
+                "name": "city_id",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_suburb_id": {
+                "name": "suburb_id",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_area_id": {
+                "name": "area_id",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_country_name": {
+                "name": "country_name",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_province_name": {
+                "name": "province_name",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_city_name": {
+                "name": "city_name",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_suburb_name": {
+                "name": "suburb_name",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_area_name": {
+                "name": "area_name",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            },
+            "ApiAddressRequest_postcode": {
+                "name": "postcode",
+                "in": "query",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "ApiAddressRequest_display_address": {
+                "name": "display_address",
                 "in": "query",
                 "required": true,
                 "schema": {
